--- a/ss/180327/testact/index.html
+++ b/ss/180327/testact/index.html
@@ -156,7 +156,7 @@ step/frame<input class="slider" id="step" min="1" max="10" step="1"/><br />
 ( Source<select id="source"></select>
  - Reference<select id="reference"></select>
  ) * alpha<input class="slider" id="actionAlpha" max="1"/>
- + Target<select id="target"></select>
+&nbsp + Target<select id="target"></select>
 </div>
 <script type="text/javascript" src="./testact.js"> </script>
 </div>
