--- a/ss/190430/test/tri.html
+++ b/ss/190430/test/tri.html
@@ -11,7 +11,7 @@
 <input type="text" value="12" id="num"></input>
 <input type="button" value="点を生成(ランダム)" onclick="createPoint();draw();"></input>
 <input type="button" value="点を生成(格子状)" onclick="createPoint2();draw();"></input><br>
-<input type="button" value="ドロネー三角形作成" onclick="createTriangles();draw()"></input><br>
+<input type="button" value="ドロネー三角形生成" onclick="createTriangles();draw()"></input><br>
 	<canvas id="c" width=512 height=512 style="border:solid 1px black;"></canvas>
 </body>
 <script type="text/javascript">
