--- a/ss/200105/test3d/card.html
+++ b/ss/200105/test3d/card.html
@@ -7,7 +7,7 @@
 <meta name="twitter:card" content="player">
 <meta name="twitter:title" content="playercardtest">
 <meta name="twitter:image" content="https://qeouo.github.io/ss/200105/test3d/sky.jpg">
-<meta name="twitter:player" content="https://qeouo.github.io/ss/200105/test3d/sky.jpg">
+<meta name="twitter:player" content="https://qeouo.github.io/ss/200105/test3d/?model=constraint.o3o">
 <meta name="twitter:player:height" content="350">
 <meta name="twitter:player:width" content="350">
 </head>
