--- a/ss/200127/tools/hdrdraw.html
+++ b/ss/200127/tools/hdrdraw.html
@@ -979,7 +979,7 @@ power<input class="slider" id="layer_power" max="10"/><br>
 </div>
 <div class="layers" id="layers_container">
 </div>
-<input id="width" style="width:64px;"><input id="height" style="width:64px;"><input type="button" id="new" value="新規レイヤ"><br>
+<input id="width" style="width:64px;" value="256"><input id="height" style="width:64px;" value="256"><input type="button" id="new" value="新規レイヤ"><br>
 <input type="file" id="f"><br>
 <a id="save_hdr" href="a">結合データをexrで保存(HDR)</a>
 <a id="save_ldr" href="a">プレビュー画像をpngで保存(LDR)</a>
