--- a/ss/200328/mapgen/index.html
+++ b/ss/200328/mapgen/index.html
@@ -291,6 +291,7 @@ var onloadfunc=function(e){
 	}
 
 	var reset=function(){
+		err_flg=false;
 
 		waves=new Array(main_img.width*main_img.height);
 		for(var i=0;i<waves.length;i++){
