--- a/ss/20200726/hdrpaint/index.html
+++ b/ss/20200726/hdrpaint/index.html
@@ -838,7 +838,7 @@ var createNewCompositeLayer=function(e){
 			</div>
 		</div>
 		<div class="canvas_status">
-			サイズ<input type="text" id="canvas_width" value="256" class="size">x
+			キャンバスサイズ<input type="text" id="canvas_width" value="256" class="size">x
 			<input type="text" id="canvas_height" value="256" class="size">
 			<span id="status2">
 			teststet
