--- a/ss/20200807/parametric.html
+++ b/ss/20200807/parametric.html
@@ -15,9 +15,9 @@
 	</div>
 		<canvas id="c" width="512" height="512" style="border:1px solid black;"></canvas>
 		<div>
-		<span style="color:red">赤が都合よく適当に作ったパラメトリック曲線</span>
+		<span style="color:red">赤がエルミート曲線</span>
 		で
-		<span style="color:green;">緑がたぶん一般的な3次スプライン曲線</span>
+		<span style="color:green;">緑がたぶん3次スプライン曲線</span>
 		</div>
 <script type="text/javascript">
 var canvas=document.getElementById("c");
