--- a/ss/20201123/index.html
+++ b/ss/20201123/index.html
@@ -279,7 +279,7 @@
 </div>
 
 <div class="dialog_parent"></div>
-<script type="module" src="./index.js"> </script>
+<script type="module" src="./main.js"> </script>
 </body>
 </html>
 
