--- a/ss/190719/test/convert.html
+++ b/ss/190719/test/convert.html
@@ -29,6 +29,9 @@ var _255=1./256;
 var xx=0,yy=0;
 
 var convert=function(){
+	for(var i=0;i<9;i++){
+		console.log(SH.A(i));
+	}
 	var srcImg = document.getElementById("srcImg");
 	canvas.width=srcImg.width;
 	canvas.height=srcImg.height;
