--- a/vsmanga/mviewer.html
+++ b/vsmanga/mviewer.html
@@ -41,7 +41,7 @@
 <input type="button" value="back" onclick="back()"></input>
 <input type="text" id="page" ></input>
 <input type="button" value="next" id=="next" onclick="next()"></input>
-<label>double page<input type="checkbox"  id="dualsw" onclick="dualsw()"></input></label>
+double page<input type="checkbox"  id="dualsw" onclick="dualsw()"></input>
 <span style="margin-left:40px;"><a href="./index.html">Return to Top Page</a></span>
 </div>
 </body>
