--- a/vsmanga/index.html
+++ b/vsmanga/index.html
@@ -1,18 +1,29 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<style>
+body{
+	line-height:150%;
+}
+</style>
 
 </head>
 <body>
 <h1>Void Manga</h1>
-*Those are Void Stranger fanfiction manga. Contains many lies and spoilers.*<br>
-*英語オンリー*<br>
+*Those are Void Stranger fanfiction manga.*<br>
+*Contains many lies and spoilers.*<br>
+*英語のみ*<br>
 <ul>
 <li><a href="mviewer.html?file=yonkoma.txt">4koma</a>
 <ul>
 <li><a href="mviewer.html?file=void_tale.txt">Void Tale</a></li>
+<li><a href="mviewer.html?file=something.txt">something</a></li>
 </ul>
 </li>
 <li><a href="mviewer.html?file=strange_dream.txt">Strange dream</a></li>
+<ul>
+<li>Strange_dream_ex</li>
+</ul>
 <li><a href="mviewer.html?file=cifs_melancholy.txt">Cif's Melancholy</a></li>
 </ul>
 </body>
