--- a/vsmanga/mviewer.html
+++ b/vsmanga/mviewer.html
@@ -1,7 +1,10 @@
 <html>
 <head>
 <link rel="stylesheet" href="main.css">
-
+<meta
+  name="viewport"
+  content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
+>
 </head>
 <body>
 <div id="view">
