--- a/vsmanga/mviewer.html
+++ b/vsmanga/mviewer.html
@@ -18,7 +18,7 @@
 <input type="text" id="page" ></input>
 <input type="button" value="next" id=="next" onpointerdown="next()"></input>
 double page<input type="checkbox"  id="dualsw" onclick="dualsw()"></input>
-<span style="margin-left:40px;"><a href="./">Return to Top Page</a></span>
+<span style="margin-left:40px;"><a href="./index.html">Return to Top Page</a></span>
 </div>
 </body>
 <script type="text/javascript" src="mviewer.js" ></script>
