--- a/vsmanga/index.html
+++ b/vsmanga/index.html
@@ -1,9 +1,16 @@
 <html>
 <head>
+<title>Void Manga</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <style>
 body{
 	line-height:150%;
+}
+.lastest{
+	font-size:small;
+	margin-left:8px;
+	color:#ccc;
+	text-decoration:none;
 }
 </style>
 
@@ -13,8 +20,11 @@ body{
 *Those are Void Stranger fanfiction manga.*<br>
 *Contains many lies and spoilers.*<br>
 *英語のみ*<br>
+
 <ul>
-<li><a href="mviewer.html?file=yonkoma.txt">4koma</a>
+<li>manga</li>
+<ul>
+<li><a href="mviewer.html?file=yonkoma.txt">4koma</a><a class="lastest" href="mviewer.html?file=yonkoma.txt&current_page=8">20240815</a></li>
 <ul>
 <li><a href="mviewer.html?file=void_tale.txt">Void Tale</a></li>
 <li><a href="mviewer.html?file=something.txt">something</a></li>
@@ -26,6 +36,10 @@ body{
 </ul>
 <li><a href="mviewer.html?file=cifs_melancholy.txt">Cif's Melancholy</a></li>
 </ul>
+</li>
+<li><a href="./e/">e</a></li>
+</ul>
 </body>
 
 </html>
+
