--- a/vsmanga/index.html
+++ b/vsmanga/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Void Manga</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <style>
 body{
 	line-height:150%;
