--- a/vsmanga/mviewer.html
+++ b/vsmanga/mviewer.html
@@ -1,10 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="main.css">
-<meta
-  name="viewport"
-  content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
->
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1">
 </head>
 <body>
 <div id="view" tabindex="1">
