--- a/vsmanga/mviewer.html
+++ b/vsmanga/mviewer.html
@@ -15,7 +15,7 @@
 <input type="text" id="page" ></input>
 <input type="button" value="next" id=="next" onpointerdown="mviewer.pagemove(1)"></input>
 double page<input type="checkbox"  id="cb_double" onclick="((e)=>{mviewer.doubleSw(e.target.checked)})(event)"></input>
-<span style="margin-left:40px;"><a href="./index.html">Return to Top Page</a></span>
+<span style="margin-left:40px;"><a href="./">Return to Top Page</a></span>
 </div>
 <script defer src="mviewer_b31612ffa58a1bc6c727.js"></script></body>
 
