--- a/vsmanga/e/index.html
+++ b/vsmanga/e/index.html
@@ -28,6 +28,7 @@ top is newest<br>
 <img loading="lazy" src="20240218.gif">
 <img loading="lazy" src="20240203.png">
 <img loading="lazy" src="20240203.gif">
+<img loading="lazy" src="20240127.gif">
 <img loading="lazy" src="20240114_2.png">
 <img loading="lazy" src="20240114.png">
 <img loading="lazy" src="20240107.png">
@@ -37,17 +38,17 @@ top is newest<br>
 <img loading="lazy" src="20231217.png">
 <img loading="lazy" src="20231210.png">
 <img loading="lazy" src="20231206.png">
-<video preload="none" muted loop autoplay src="20231122.mp4"></video>
+<video playsinline  muted loop autoplay src="20231122.mp4"></video>
 <img loading="lazy" src="20231122.jpeg">
 <img loading="lazy" src="20231117.png">
-<video preload="none" muted loop autoplay src="20231113.mp4"></video>
-<video preload="none" muted loop autoplay src="20231111_2.mp4"></video>
-<video preload="none" muted loop autoplay src="20231111.mp4"></video>
+<video playsinline muted loop autoplay src="20231113.mp4"></video>
+<video playsinline muted loop autoplay src="20231111_2.mp4"></video>
+<video playsinline muted loop autoplay src="20231111.mp4"></video>
 <img loading="lazy" src="20231101.jpeg">
 <img loading="lazy" src="20231022.jpeg">
 <img loading="lazy" src="20231021.png">
 <img loading="lazy" src="20231007.png">
-<video preload="none" muted loop autoplay src="20231001.mp4"></video>
+<video playsinline muted loop autoplay src="20231001.mp4"></video>
 <img loading="lazy" src="20230924.png">
 <img loading="lazy" src="20230919_2.jpeg">
 <img loading="lazy" src="20230919.jpeg">
