--- a/vsmanga/index.html
+++ b/vsmanga/index.html
@@ -32,7 +32,7 @@ body{
 </li>
 <li><a href="mviewer.html?file=strange_dream.txt">Strange dream</a></li>
 <ul>
-<li>Strange_dream_ex</li>
+<li><a href="mviewer.html?file=strange_dream_ex.txt">Strange dream_ex</a><a class="lastest" href="mviewer.html?file=strange_dream_ex.txt&current_page=1">20240823</a></li></li>
 </ul>
 <li><a href="mviewer.html?file=cifs_melancholy.txt">Cif's Melancholy</a></li>
 </ul>
