--- a/vsmanga/index.html
+++ b/vsmanga/index.html
@@ -35,6 +35,7 @@ body{
 <li><a href="mviewer.html?file=strange_dream_ex.txt">Strange dream_ex</a><a class="lastest" href="mviewer.html?file=strange_dream_ex.txt&current_page=1">20240823</a></li></li>
 </ul>
 <li><a href="mviewer.html?file=cifs_melancholy.txt">Cif's Melancholy</a></li>
+<li><a href="mviewer.html?file=bad_dream.txt">Bad dream</a><span class="lastest">20240825</span></li>
 </ul>
 </li>
 <li><a href="./e/">e</a></li>
