--- a/vsmanga/index.html
+++ b/vsmanga/index.html
@@ -15,6 +15,15 @@ body{
 </style>
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T489V94VF1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T489V94VF1');
+</script>
 <body>
 <h1>Void Manga</h1>
 *Those are Void Stranger fanfiction manga.*<br>
