--- a/vsmanga/mviewer.html
+++ b/vsmanga/mviewer.html
@@ -3,6 +3,15 @@
 <link rel="stylesheet" href="main.css">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T489V94VF1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T489V94VF1');
+</script>
 <body>
 <div id="view" tabindex="1">
 		<div class="left_handle clickable" onpointerdown="mviewer.pagemove(-1);" ontouchstart="event.stopPropagation();"></div>
