--- a/vsmanga/index.html
+++ b/vsmanga/index.html
@@ -35,7 +35,7 @@ body{
 <ul>
 <li><a href="mviewer.html?file=yonkoma.txt">4koma</a><a class="lastest" href="mviewer.html?file=yonkoma.txt&current_page=8">20240815</a></li>
 <ul>
-<li><a href="mviewer.html?file=void_tale.txt">Void Tale</a></li>
+<li><a href="mviewer.html?file=void_tale.txt">Void Tale</a><a class="lastest" href="mviewer.html?file=void_tale.txt&current_page=3">20240908</a></li>
 <li><a href="mviewer.html?file=something.txt">something</a></li>
 </ul>
 </li>
