--- a/vsmanga/index.html
+++ b/vsmanga/index.html
@@ -33,10 +33,10 @@ body{
 <ul>
 <li>manga</li>
 <ul>
-<li><a href="mviewer.html?file=yonkoma.txt">4koma</a><a class="lastest" href="mviewer.html?file=yonkoma.txt&current_page=8">20240815</a></li>
+<li><a href="mviewer.html?file=yonkoma.txt">4koma</a><a class="lastest" href="mviewer.html?file=yonkoma.txt&current_page=9">20240929</a></li>
 <ul>
 <li><a href="mviewer.html?file=void_tale.txt">Void Tale</a><a class="lastest" href="mviewer.html?file=void_tale.txt&current_page=3">20240908</a></li>
-<li><a href="mviewer.html?file=something.txt">something</a></li>
+<li><a href="mviewer.html?file=something.txt">something</a><a class="lastest" href="mviewer.html?file=something.txt&current_page=6">20240929</a></li>
 </ul>
 </li>
 <li><a href="mviewer.html?file=strange_dream.txt">Strange dream</a></li>
@@ -48,6 +48,7 @@ body{
 </ul>
 </li>
 <li><a href="./e/">e</a></li>
+<li><a href="x.com/qeouo_vs">x.com/qeouo_vs</a></li>
 </ul>
 </body>
 
