--- a/vsmanga/index.html
+++ b/vsmanga/index.html
@@ -48,7 +48,7 @@ body{
 </ul>
 </li>
 <li><a href="./e/">e</a></li>
-<li><a href="x.com/qeouo_vs">x.com/qeouo_vs</a></li>
+<li><a href="https://x.com/qeouo_vs">x.com/qeouo_vs</a></li>
 </ul>
 </body>
 
