--- a/ss/20250831/index.html
+++ b/ss/20250831/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Script-Type" content="text/javascript" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Cache-Control" content="no-cache" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=640">
 <title>FOUR EYES</title>
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/slider.css">
@@ -16,9 +16,25 @@
 
 <body>
 
-<div class="main">
-
 <div id="aaa" bind:content="render";> </div>
+<div style="white-space:pre;">
+*Read Me*
+
+<< Four Eyes >>
+
+v.0.0.1.0 Released 2025/09/05
+
+
+#Game Description
+
+Control Cif to skillfully catch glasses.
+Your score is determined by how well the glasses fit.
+Catching them mid-jump earns additional points.
+
+#Controls
+
+Left/Right Move Cif left and right.
+  Z     Jump.
 </div>
 
 <label class="vpad" ><input type="checkbox" id="vpad_visible">virtual_pad</label>
